--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -19,8 +19,8 @@ label:new[]
 Added new sink properties:
 
 - `neo4j.cypher.bind-header-as`
-- `neo4j.cypher.bind-header-as`
-- `neo4j.cypher.bind-header-as`
+- `neo4j.cypher.bind-key-as`
+- `neo4j.cypher.bind-value-as`
 - `neo4j.cypher.bind-value-as-event`
 a| Cypher strategy now allows binding of message headers, key and value as separate and configurable variables to be used in user provided Cypher queries.
 
