--- a/modules/ROOT/partials/kafka-connect-cypher-strategy.adoc
+++ b/modules/ROOT/partials/kafka-connect-cypher-strategy.adoc
@@ -11,7 +11,7 @@ To configure a cypher strategy for a desired topic, you must follow the followin
 
 [IMPORTANT]
 ====
-Starting with 5.1.0 version of the {product-name}, Cypher strategy will bind header, key and value of the messages as `\__header`, `__key` and `__value` respectively, which will be passed to the user provided Cypher query as predefined variables.
+Starting with version 5.1.0 of the {product-name}, the Cypher strategy binds header, key, and value of the messages as `\__header`, `__key`, and `__value` respectively, which are passed to the user-provided Cypher query as predefined variables.
 See xref:cypher_strategy_settings[] for more information on how to customize the name of the variables.
 
 For backward compatibility, `event` is still available for use but will only correspond to the value of the message.
