--- a/modules/ROOT/pages/confluent-cloud.adoc
+++ b/modules/ROOT/pages/confluent-cloud.adoc
@@ -1,4 +1,4 @@
-= Confluent Cloud Support
+= Confluent Cloud quickstart
 
 Neo4j supports the Confluent Cloud with the Neo4j Connector for Confluent running as a Custom Connector. 
 Confluent's Custom Connectors provide a way to extend the Confluent Cloud beyond the fully managed connectors available on their platform.
@@ -6,4 +6,4 @@ Confluent's Custom Connectors provide a way to extend the Confluent Cloud beyond
 Custom Connectors are Kafka Connect plugins created by users, modified open-source connector plugins, or third-party connector plugins like the Neo4j Connector for Confluent. 
 Find out more about Custom Connectors in the link:https://docs.confluent.io/cloud/current/connectors/bring-your-connector/overview.html[Confluent documentation].
 
-Confluent Cloud does not provide the Neo4j Connector for Confluent as a managed connector, if you are interested in a managed connector please raise the request with Confluent.
+You can create a connector from Confluent Cloud to Neo4j and link:https://neo4j.com/docs/aura/auradb/[Neo4j AuraDB] by following the instructions on the link:https://neo4j.com/developer-blog/confluent-cloud-neo4j-auradb-connector-2/[Neo4j Developer Blog].
