--- a/modules/ROOT/pages/known-issues.adoc
+++ b/modules/ROOT/pages/known-issues.adoc
@@ -2,6 +2,6 @@
 = Known Issues
 :description: This chapter describes known issues related to {product-name}.
 
-== 5.1.0-beta02
+== 5.1.0-rc01
 
-As of 5.1.0-beta02, {product-name} does not have any known issues.
+As of 5.1.0-rc01, {product-name} does not have any known issues.
