--- a/modules/ROOT/pages/sink/cdc.adoc
+++ b/modules/ROOT/pages/sink/cdc.adoc
@@ -1,4 +1,4 @@
-=== Change Data Capture Strategy
+= Change Data Capture Strategy
 
 This strategy allows to ingest CDC events coming from another Neo4j instance, generated either by a source connector instance configured for xref:#kafka-connect-source-cdc-strategy[Change Data Capture strategy] or the deprecated neo4j streams plugin.
 
@@ -15,7 +15,7 @@ This strategy merges nodes and relationships by the CDC event's `elementId` or `
 +
 This strategy merges nodes and relationships by the constraints (node key, relationship key and/or property uniqueness+existence) defined in the source database.
 
-==== Source ID sub-strategy
+== Source ID sub-strategy
 
 `Source ID` strategy merges nodes and relationships by the source entity's `elementId` or `id` values, by storing this value as an explicit property on the target nodes and relationships and by marking nodes with an explicit label.
 
@@ -28,7 +28,7 @@ Configuration of this strategy requires declaration of list of topics to read ch
 "neo4j.cdc.source-id.property-name": "<the property name given to the CDC id field, default=sourceId>"
 ----
 
-===== Example
+=== Example
 
 Given that you configure the topics your sink connector subscribes to as follows;
 
@@ -158,7 +158,7 @@ endif::[]
 
 ====
 
-==== Schema sub-strategy
+== Schema sub-strategy
 
 `Schema` strategy merges nodes and relationships by the constraints declared in the change event, thus preserves the source schema structure.
 
@@ -169,7 +169,7 @@ Configuration of this strategy requires declaration of list of topics to read ch
 "neo4j.cdc.schema.topics": "<COMMA_SEPARATED_LIST_OF_TOPICS>"
 ----
 
-===== Example
+=== Example
 
 Given that you configure the topics your sink connector subscribes to as follows;
 
