--- a/modules/ROOT/pages/sink/pattern.adoc
+++ b/modules/ROOT/pages/sink/pattern.adoc
@@ -1,8 +1,8 @@
-=== Pattern strategy
+= Pattern strategy
 
 This strategy allows you to extract nodes and relationships from a JSON object through extraction patterns.
 
-==== Node Patterns
+== Node Patterns
 
 Node patterns are defined similar to Cypher node patterns.
 
@@ -20,7 +20,7 @@ Node patterns are defined similar to Cypher node patterns.
 [NOTE]
 You cannot mix inclusion and exclusion so your pattern must contains all exclusion or inclusion properties.
 
-===== Examples
+=== Examples
 
 * `MERGE` operation on `User` label with `userId` treated as a key and assigning all properties from JSON object to the node
 +
@@ -57,7 +57,7 @@ or
 (:User{!userId, -address})
 ----
 
-===== Configuration
+=== Configuration
 
 You can configure the node pattern as follows;
 
@@ -80,7 +80,7 @@ You can transform it into a node by providing the following configuration:
 "neo4j.pattern.node.topic.user": "(:User{!userId})"
 ----
 
-==== Relationship Patterns
+== Relationship Patterns
 
 Relationship patterns are defined similar to Cypher relationship patterns.
 
@@ -99,7 +99,7 @@ Relationship patterns are defined similar to Cypher relationship patterns.
 [NOTE]
 You cannot mix inclusion and exclusion so your pattern must contains all exclusion or inclusion properties.
 
-===== Examples
+=== Examples
 
 . `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all other JSON properties to the relationship
 +
@@ -136,7 +136,7 @@ You cannot mix inclusion and exclusion so your pattern must contains all exclusi
 (:User{!userId, userFirstName, userLastName})-[:BOUGHT{price, currency}]->(:Product{!productId})
 ----
 
-===== Configuration
+=== Configuration
 
 You can configure the relationship pattern as follows;
 
@@ -159,7 +159,7 @@ You can transform it into a path, like `(n)-[r]->(m)`, by providing the followin
 "neo4j.pattern.relationship.topic.user": "(:User{!userId})-[:BOUGHT{price, currency}]->(:Product{!productId})"
 ----
 
-==== Tombstone Records
+== Tombstone Records
 
 The pattern strategy supports https://en.wikipedia.org/wiki/Tombstone_(data_store)[tombstone records].
 In order to use it, message key should contain at least the key properties present in the provided pattern and message value should be set as `null`.
