--- a/modules/ROOT/pages/sink/pattern.adoc
+++ b/modules/ROOT/pages/sink/pattern.adoc
@@ -1,6 +1,6 @@
 = Pattern strategy
 
-This strategy allows you to extract nodes and relationships from a JSON object through extraction patterns.
+This strategy allows you to extract nodes and relationships from a Struct object through extraction patterns.
 
 == Node Patterns
 
@@ -9,16 +9,20 @@ Node patterns are defined similar to Cypher node patterns.
 . start with `(`
 . define optional list of labels, separated by `:`, such as `:Person` or `:Person:Employee`
 . open property section with `{`
-. define properties to be treated as keys, each prepended with `!`, where at least one key property needs to be provided
+. define properties to be treated as keys, each prepended with `!`, where at least one key property needs to be provided.
+Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `userId: \__value.user.id`.
+By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
 . either
-.. nothing or `*`, meaning that assign all properties from JSON object to the node
-.. list of property names to be assigned to the node from JSON object
-.. list of property names _not_ to be assigned to the node, each prepended with `-`, all other properties from JSON object will be assigned to the node
+.. nothing or `*`, meaning that assign all properties from message to the node
+.. list of property names to be assigned to the node from message
+Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `userName: \__value.user.name`.
+By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
+.. list of property names _not_ to be assigned to the node, each prepended with `-`, all other properties from message will be assigned to the node
 . close property section with `}`
 . end with `)`
 
 [NOTE]
-You cannot mix inclusion and exclusion so your pattern must contains all exclusion or inclusion properties.
+You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must contain either all exclusion or inclusion properties.
 
 === Examples
 
@@ -47,7 +51,7 @@ or
 +
 [source]
 ----
-(:User{!userId, surname, address.city})
+(:User{!userId, surname, city: address.city})
 ----
 
 * `MERGE` operation on `User` label with `userId` treated as key and assigning all properties excluding `address` property from JSON object to the node
